2007-10-31  J. Mowery  <jmowery@tresys.com>

	* Fix to libqpol when querying policies with no genfscon statements.

	* Fix to SWIG wrappers to correctly report exceptions in multi-threaded
	  Java environments.

2007-10-31  J. Tang  <jtang@tresys.com>

	* Modifed libqpol to explicitly ignore disabled aliases.

	* Merged RedHat's spec file changes.

2007-10-08  J. Tang  <jtang@tresys.com>

	* Fix to libqpol when qpol_type_get_alias_iter() could erroneously
	be set to an initially wrong position for certain primary types.

2007-10-02  J. Tang  <jtang@tresys.com>

	* Fix to libqpol to synthesize object_r.  This was previously
	(erroneously) handled in libapol.

2007-09-26  J. Tang  <jtang@tresys.com>

	* Fix to apol where empty levels would throw an error during
	validation.

2007-09-04  J. Mowery  <jmowery@tresys.com>

	* Fixes to libsefs and apol if an invalid regular expression is
	given.

2007-08-30  J. Mowery  <jmowery@tresys.com>

	* Do not look for neverallow rules on default avrule query if not
	available.

2007-08-22  J. Tang  <jtang@tresys.com>

	* Ported bug fixes in branches/setools-devel to trunk.  This is
	the official release of SETools 3.3.1.

2007-08-20  J. Tang  <jtang@tresys.com>

	* Fixed memory leak in libapol/infoflow analysis, where edges were
	not being freed.  Thanks to Ben Martin for spotting this error.

2007-08-16  J. Tang  <jtang@tresys.com>

	* Fixed an error in libapol's infoflow.  When performing a
	transitive search, let there be an intermediate rule with source
	A, an attribute.  If a member of A, type T, is excluded by not
	calling apol_infoflow_analysis_append_intermediate(), it was still
	possible to return an infoflow result that uses T.  This has been
	fixed.

2007-08-13  J. Tang  <jtang@tresys.com>

	* Fix error in libsefs when querying a filesystem or fcfile by
	range, but the fclist is not MLS.

2007-08-06  J. Tang  <jtang@tresys.com>

	* configure.ac: Tk is checked only if --enable-swig-tcl and